manifests/base/resources/api-keys/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: api-keys
    chart: api-keys-3.0.0
    heritage: Helm
    release: api-keys
  name: api-keys
  namespace: $(NAMESPACE)
spec:
  ports:
  - name: api-keys
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-keys
    release: api-keys
  type: ClusterIP
---
